[package]
name = "bbcc"
version = "0.1.0"
edition = "2018"

[dependencies]
evalexpr = "12.0.2"
lazy_static = "1.5.0"
regex = "1.11.1"
notify = "7.0.0"
ctrlc = "3.2"
num-format = "0.4.4"
colored = "3.0"
terminal_size = "0.4.1"

[profile.release]
#opt-level = 'z'          # 优化级别为“z”，这是最高级别的优化
opt-level = 3          # 如果希望最大化性能而不在意体积, 可以考虑将opt-level改为3, 这样会生成运行速度更快的代码
lto = true               # 启用 Link-Time Optimization（LTO）
codegen-units = 1        # 将编译单元设置为1以减少可执行文件大小
panic = "abort"          # 不需要捕获 panic
